# bionic-gpt

./: .gitignore  .gitmodules  .releaserc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Earthfile  Justfile  LICENCE  LICENCE-COMMERCIAL  LICENSE-MIT  Pulumi.yaml  README.md  bionic.sh  dagger.json  docker-compose-arm.yml  docker-compose-embed-gpu.yml  docker-compose-gpu.yml  docker-compose-integration.yml  docker-compose-ollama.yml  docker-compose.yml  index.html  install.sh  integration-connection-enhancement-plan.md  integration_refactor_plan.md  justfile  llm-function-calling-implementation-plan.md  package-lock.json  package.json  pngquant  stack.yaml
crates/agent-runtime/: Cargo.toml  README.md  api_chat_orchestrator.rs  chat_converter.rs  chat_request.rs  chat_types.rs  context_builder.rs  jwt.rs  lib.rs  limits.rs  moderation.rs  openai_types.rs  provider_passthrough.rs  result_sink.rs  stream_assembler.rs  stream_errors.rs  tests.rs  token_count.rs  tool_conversion.rs  ui_chat_orchestrator.rs  ui_chat_orchestrator_tests.rs
crates/airbyte-connector/: Cargo.toml  README.md
crates/axum-server/: Cargo.toml
crates/axum-server/src/: api_keys.rs  api_pipeline.rs  api_reverse_proxy.rs  authentication.rs  authentication_handler.rs  bulk_import.rs  config.rs  email.rs  errors.rs  index.rs  layout.rs  main.rs  prompt.rs  registration_handler.rs  rls.rs  static_files.rs  training.rs  ui_completions.rs  unstructured.rs
crates/axum-server/tests/: aardvark.rs  common.rs  multi_user_test.rs  single_user_test.rs
crates/bionic/: Cargo.toml
crates/bionic-gpt/: Cargo.toml  README.md  cloudflare-build.sh  input.css
crates/bionic-gpt/assets/: copy-paste.js  licence.html
crates/bionic-gpt/content/: .spelling
crates/bionic-gpt/src/: architect_course_summary.rs  blog_summary.rs  docs_summary.rs  generator.rs  lib.rs  main.rs  pages.rs  pages_summary.rs  site_header.rs  ui_links.rs
crates/bionic/src/: error.rs  install.rs  main.rs
crates/candle-llama/: Cargo.toml
crates/candle-llama/src/: main.rs
crates/db/: Cargo.toml  Justfile  README.md  authorized.rs  authz.rs  backup-conf.yaml  build.rs  customer_keys.rs  i18n.rs  lib.rs  licence.rs  rls.rs  team_public_id.rs  vector_search.rs
crates/db/diagrams/: orphans.dot
crates/db/migrations/: 20220410155201_initial_setup.sql  20220410155211_authentication.sql  20220410155233_rbac_and_authorization.sql  20220410155252_teams.sql  20220410155252_teams_and_organisations.sql  20220728091159_rls_setup.sql  20220808093939_auth_and_readonly_policies.sql  20220808094314_tenancy_isolation.sql  20230801121853_chats.sql  20230804140530_documents_and_datasets.sql  20230806114756_models.sql  20230807080530_documents_and_datasets.sql  20230807094835_prompts.sql  20230810114756_models.sql  20230901121853_chats.sql  20230924090500_api_keys.sql  20231005073231_demonstration_setup.sql  20231114111142_pipelines.sql  20231128085638_audit_trail.sql  20231128085647_audit_trail_triggers.sql  20231128085935_demonstration_setup.sql  20231214084923_sysadmin_trigger.sql  20231216131430_new_permissions.sql  20231216133538_new_role_permissions.sql  20240213083047_chunks_chats.sql  20240221131717_refactor_prompts.sql  20240309132848_chunks_chats_cascade.sql  20240430062736_api_audit_trail.sql  20240430062736_api_chats.sql  20240430132224_add_tokens_to_chats.sql  (+91 more)
crates/deploy-mcp/: .gitignore  Cargo.toml  README.md  cloudflare-build.sh  input.css
crates/dixous-poc/: Cargo.toml  Dioxus.toml  README.md
crates/embeddings-api/: Cargo.toml
crates/embeddings-job/: Cargo.toml
crates/gemini/: Cargo.toml
crates/hot-reload/: Cargo.toml  README.md  hot-reload.sh  new-server.txt
crates/integration-testing/: Cargo.toml  README.md
crates/integrations/: Cargo.toml  README.md  attachment_as_text.rs  attachment_to_markdown.rs  attachment_to_text_converter.rs  attachments.rs  attachments_as_text.rs  attachments_list.rs  attachments_read.rs  bionic_openapi.rs  external_integration.rs  function_executor.rs  function_tools.rs  lib.rs  open_api_v3.rs  open_api_v3_integration.rs  system_openapi.rs  test_async.rs  time_date.rs  token_providers.rs  tool.rs  tool_call_handler.rs  tool_executor.rs  tool_registry.rs  weather.rs
crates/k8s-operator/: Cargo.toml  README.md  bionic-operator.yaml  bionic.yaml  bionics.bionic-gpt.com.yaml  bounce-cluster.sh
crates/llm-proxy/: Cargo.toml  README.md  api_chat_stream.rs  api_reverse_proxy.rs  chat_converter.rs  errors.rs  function_executor.rs  function_tools.rs  jwt.rs  lib.rs  limits.rs  moderation.rs  prompt.rs  sse_chat_enricher.rs  sse_chat_error.rs  synthesize.rs  tests.rs  token_count.rs  tool_call_handler.rs  ui_chat_stream.rs  ui_chat_stream_tests.rs  user_config.rs
crates/mcp-servers/: Cargo.toml  README.md  rag-engine.rs  text-retrieval.rs  time.rs
crates/openai-api/: Cargo.toml  lib.rs  token_count.rs
crates/openai-poc/: Cargo.toml
crates/postgres-mcp/: Cargo.toml  postgres.json
crates/rag-engine/: Cargo.toml  Justfile  README.md
crates/static-website/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  cloudflare-build.sh  input.css  package-lock.json  package.json  tailwind.config.js
crates/supakube/: Cargo.toml
crates/tool-runtime/: Cargo.toml  README.md  lib.rs  openapi_tool_factory.rs  system_tool_sources.rs  test_async.rs  token_count.rs  tool_auth.rs  tool_catalog.rs  tool_dispatcher.rs  tool_interface.rs  types.rs
crates/ui-components/: Cargo.toml  api_keys.rs  app_layout.rs  bulk_import.rs  index.rs  lib.rs  logout_form.rs  model_form.rs  profile.rs  profile_popup.rs  teams.rs  training.rs
crates/ui-pages/: Cargo.toml  app_layout.rs  enterprise.rs  lib.rs  logout_form.rs  model_form.rs  profile.rs  profile_popup.rs  teams.rs  training.rs
crates/usage-report/: Cargo.toml  main.rs
crates/web-pages/: Cargo.toml  README.md  app_layout.rs  avatar.rs  base_layout.rs  button.rs  charts.rs  confirm_modal.rs  hero.rs  i18n.rs  lib.rs  logout_form.rs  mcp_api_keys.rs  menu.rs  profile.rs  profile_popup.rs  routes.rs  section_introduction.rs  security.rs  snackbar.rs  teams.rs
(+1713 files in other folders)
