[workspace]
resolver = "2"

members = [
    "crates/*",
]

# https://corrode.dev/blog/tips-for-faster-rust-compile-times/#turn-off-debuginfo
[profile.dev]
debug = 0
strip = "debuginfo"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"