[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
db = { path = "../db" }
tool-runtime = { path = "../tool-runtime" }
openai-api = { path = "../openai-api" }

axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["form", "typed-routing", "cookie"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
http.workspace = true
tokio-stream = "0.1"
reqwest = { workspace = true, default-features = false, features = ["stream", "json", "rustls"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tower-http = { workspace = true, features = ["fs", "cors"] }
async-trait.workspace = true
tiktoken-rs = "0.7.0"

base64.workspace = true

[dev-dependencies]
time.workspace = true
