[package]
name = "airbyte-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0", default-features = false, features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
