[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
assets = { path = "../asset-pipeline" }
ui-components = { path = "../ui-components" }
open-api = { path = "../open-api" }

axum = { version = "0.6", default-features = false, features = ["multipart", "form"] }
## We need the form from axum-extra as it processes multi select boxes.
axum-extra = { version = "0", default-features = false, features = ["form"] }
# Needed for the authentication.rs handler
http = "0.2"
hyper = { version = "0", features = ["server"] }
hyper-rustls = "0"
rustls = "0"
pin-project = "1"
tower = { version = "0", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-util = "0"
validator = { version = "0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }
tower-http = { version = "0", default-features = false, features = ["fs", "trace"] }

# Used for our request parser user_id
futures = "0.3"

# Generate secure invitations
rand = "0"
sha2 = "0"
lettre = { version = "0.10.0-rc.4", default-features = false,  features = ["rustls-tls", "smtp-transport", "builder"] }
base64 = "0.13.1" # So we encode DER public key to base64

# So we can store embeddings
pgvector = { version = "0.2", features = ["postgres"] }

## Used to call unstructured API
reqwest = { version = "0", default-features = false, features = ["multipart", "rustls-tls", "json"] }

[dev-dependencies]
# WebDriver Library for UI testing.
thirtyfour = { version = "0" }
tokio = { version = "1", features = ["macros"] }
rand = "0"
quoted_printable = "0"

