[package]
name = "bionic"
version = "0.0.1" 
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 
clap = { version = "4.5", features = ["derive"] }
kube = { version = "0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0", features = ["latest"] }
anyhow = "1.0.44"
