[package]
name = "candle-llama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", package = "candle-core" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
clap = { version = "4", features = ["derive"] }
hf-hub = "0.3.0"
tokenizers = { version = "0.14" }
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"

accelerate-src = { version = "0.3.2", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", optional = true }

intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
libc = { version = "0.2.147" }

[features]
default = []
mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
#accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
