[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
tokio-postgres.workspace = true
cornucopia_async = { version = "0.6", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.12", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1"] }
time = { version = "0.3", default-features = false,  features = ["formatting", "serde", "parsing"] }
pgvector = { workspace = true, features = ["postgres"] }
tracing.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
futures.workspace = true
base64.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
uuid = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["sync"] }
sqids = "0.4"
