[package]
name = "deploy-mcp"
version = "0.1.0"
authors = ["Deploy Team <team@deploy.ai>"]
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-routing"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0", features = ["env-filter"] }
dioxus = { version = "0.6", default-features = false, features = ["macro", "html", "signals"] }
dioxus-ssr = { version = "0.6", default-features = false }
serde = "1"
serde_json = "1"
tower-http = { workspace = true, features = ["fs", "trace"] }
syntect = "5.0"
pulldown-cmark = "0.12.2"
tower-livereload = "0.9.5"
static-website = { path = "../static-website" }
