[package]
name = "deploy-mcp"
version = "0.1.0"
authors = ["Deploy Team <team@deploy.ai>"]
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-routing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dioxus.workspace = true
dioxus-ssr.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-http = { workspace = true, features = ["fs", "trace"] }
syntect.workspace = true
pulldown-cmark.workspace = true
tower-livereload.workspace = true
static-website = { path = "../static-website" }
