[package]
name = "embeddings-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For calling out to the unstrctured API
reqwest = { version = "0", default-features = false, features = ["multipart", "rustls-tls", "json"] }

serde = { version = "1", features = ["derive"] }
tracing = "0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }