[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0", default-features = false, features = ["stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
ureq = { version = "2.10", features = ["json"] }
