[package]
name = "integration-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }

[dev-dependencies]
# WebDriver Library for UI testing.
thirtyfour = { version = "0" }
time = { version = "0", default-features = false }
tokio = { version = "1", features = ["macros"] }
rand = "0"
quoted_printable = "0"
reqwest = { version = "0", default-features = false, features = ["multipart", "rustls-tls", "json"] }