[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
openai-api = { path = "../openai-api" }
embeddings-api = { path = "../embeddings-api" }
rag-engine = { path = "../rag-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
axum = { version = "0.8" }
chrono = { version = "0.4" }
db = { path = "../db" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
async-trait = { version = "0.1" }
oas3 = "0.16.1"
oauth2 = "5.0.0"
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls", "stream"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
# For sandbox execution
k8s-operator = { path = "../k8s-operator" }
base64 = "0.21"
rand = "0.8"
kube = "0.99"
k8s-openapi = { version = "0.24", features = ["latest"] }
object-storage = { path = "../object-storage" }
# Used by tests
futures = "0.3"

# Used by the web tool to stream responses
futures-util = "0.3"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
once_cell = "1"
