[package]
name = "integrations"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
openai-api = { path = "../openai-api" }
embeddings-api = { path = "../embeddings-api" }
rag-engine = { path = "../rag-engine" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
axum.workspace = true
chrono = { version = "0.4" }
db = { path = "../db" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
async-trait = { version = "0.1" }
oas3 = "0.16.1"
oauth2 = "5.0.0"
reqwest = { workspace = true, default-features = false, features = ["json", "rustls", "stream"] }
time = { workspace = true, features = ["parsing", "formatting"] }
# Used by tests
futures = "0.3"

# Used by the web tool to stream responses
futures-util = "0.3"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
once_cell = "1"
