[package]
name = "k8s-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 
# Library for talking to Kubernetes API
kube = { version = "0.87.2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube-derive = "0" # Support for Custom Resource Definitions
kube-runtime = "0" # Custom controller support
futures = "0.3"
futures-util = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1"
schemars = "0"
# Custom Error definitions and convenient error mappings
thiserror = "1" 

tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }
anyhow = "1.0.44"
url = "2"

rand = "0.8.4"
base64 = "0.13.0"