[package]
name = "k8s-operator"
version = "1.11.25"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 
# Library for talking to Kubernetes API
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube-derive = "0.99.0" # Support for Custom Resource Definitions
kube-runtime = "0.99.0" # Custom controller support
futures = "0.3"
futures-util = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1"
serde_yaml = "0"
schemars = "0.8.22"
# Custom Error definitions and convenient error mappings
thiserror = "1" 

tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }
anyhow = "1.0.44"
url = "2"

rand = "0.8.4"
base64 = "0.13.0"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }

# For the CLI
clap = { version = "4.5", features = ["derive"] }
local-ip-address = "=0.6.1"
