[package]
name = "mcp-servers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "time-server"
path = "time.rs"

[[bin]]
name = "rag-engine-server"
path = "rag-engine.rs"

[[bin]]
name = "text-retrieval-server"
path = "text-retrieval.rs"