[package]
name = "mcp-servers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.1.5", features = ["server", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
openai-api = { path = "../openai-api" }
serde_json = "1"

[[bin]]
name = "time-server"
path = "time.rs"

[[bin]]
name = "rag-engine-server"
path = "rag-engine.rs"

[[bin]]
name = "text-retrieval-server"
path = "text-retrieval.rs"