[package]
name = "openai-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0", default-features = false, features = ["stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"

[[bin]]
name = "function-calling-example"
path = "src/main.rs"