[package]
name = "openai-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
openai = { version = "1.1.0", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.40"
