[package]
name = "postgres-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
http = "1"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.21"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
tokio-postgres-rustls = "0.10"
rustls-native-certs = "0.7"
rustls = { version = "0.21" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde"] }
hyper = { version = "1", features = ["http1", "server"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
