[package]
name = "postgres-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
futures.workspace = true
http.workspace = true
indexmap = { version = "2", features = ["serde"] }
base64.workspace = true
once_cell = "1"
regex = "1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = "3"
time = { workspace = true, features = ["serde", "formatting", "parsing", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls-native-certs.workspace = true
rustls.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
uuid = { workspace = true, features = ["serde"] }
hyper = { workspace = true, features = ["http1", "server"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
