[package]
name = "rag-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
embeddings-api = { path = "../embeddings-api" }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }

# So we can store embeddings
pgvector = { version = "0.3", features = ["postgres"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

## Used to call unstructured API
reqwest = { version = "0", default-features = false, features = ["multipart", "rustls-tls", "json"] }