[package]
name = "rag-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
object-storage = { path = "../object-storage" }
rig-core = { version = "0.24", default-features = false, features = ["reqwest-rustls"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# So we can store embeddings
pgvector = { workspace = true, features = ["postgres"] }

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

## Used to call unstructured API
reqwest = { workspace = true, default-features = false, features = ["multipart", "rustls", "json"] }
infer = "0"
mime_guess = "2"
