[package]
name = "static-website"
version = "0.1.0"
authors = ["Bionic Dev <dev@bionic-gpt.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-routing"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dioxus.workspace = true
dioxus-ssr.workspace = true
serde.workspace = true
tower-http = { workspace = true, features = ["fs", "trace"] }

syntect.workspace = true
pulldown-cmark.workspace = true
tower-livereload.workspace = true
