[package]
name = "supakube"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } 

# Kubernetes in Rust
k8s-openapi = { version = "0", features = ["latest"] }
kube = { version = "0", features = ["runtime", "derive"] }

# For the CLI
clap = { version = "4.5", features = ["derive"] }

# Custom Error definitions and convenient error mappings
thiserror = "1" 
anyhow = "1.0.44"

serde = "1"
serde_json = "1"
serde_yaml = "0"
schemars = "0"

tracing = "0"
tracing-subscriber = { version="0", features = ["env-filter"] }

# So we can create secrets
rand = "0.8.4"
base64 = "0.13.0"
url = "2"