[package]
name = "tool-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
openai-api = { path = "../openai-api" }
embeddings-api = { path = "../embeddings-api" }
rag-engine = { path = "../rag-engine" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
axum.workspace = true
chrono.workspace = true
db = { path = "../db" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
async-trait.workspace = true
oas3.workspace = true
oauth2.workspace = true
reqwest = { workspace = true, default-features = false, features = ["json", "rustls", "stream"] }
time = { workspace = true, features = ["parsing", "formatting"] }
# Used by tests
futures.workspace = true

# Used by the web tool to stream responses
futures-util = "0.3"
html2text = "0.13"
