[package]
name = "ui-pages"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
assets = { path = "../asset-pipeline" }
daisy_rsx = { path = "../daisy-rsx" }
dioxus = "0.5"
dioxus-ssr = "0.5"