[package]
name = "usage-report"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "usage-report"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
db = { path = "../db" }
tokio-postgres = { version = "0.7", features = ["with-time-0_3", "with-serde_json-1"] }
serde_json = "1"
