[package]
name = "web-pages"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
assets = { path = "../web-assets" }
integrations = { path = "../integrations" }
openai-api = { path = "../openai-api" }
axum.workspace = true
axum-extra = { workspace = true, features = ["typed-routing"] }
dioxus.workspace = true
dioxus-ssr.workspace = true
serde.workspace = true
serde_json.workspace = true
daisy_rsx = "0.1"
comrak = { version = "0.39.0", features = ["shortcodes"] }
time.workspace = true
validator = { workspace = true, features = ["derive"] }
oas3.workspace = true
toml = "0.8"
